--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^16.0.0",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5",
+    "multer": "^1.4.5-lts.1",
     "csv-parser": "^3.0.0"
   }
 }
